--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
+  "AppSettings": {
+    "Token": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
