add the sqlite connection

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "",
-    "SqliteConnection": ""
+    "DefaultConnection": "Server=LAPTOP-OBLKG209\\SQLEXPRESS; Database=dotnet-db; Trusted_Connection=yes",
+    "SqliteConnection": "Data Source=dotnetrpg.db"
   },
   "AppSettings": {
-    "Token": ""
+    "Token": "my top secret key my top secret key my top secret key my top secret key my top secret key my top secret key my top secret key"
   },
   "Logging": {
     "LogLevel": {
